WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269595
Unreviewed, fix WinCairo build after
274842@main
https://bugs.webkit.org/show_bug.cgi?id=269595
Summary
Unreviewed, fix WinCairo build after 274842@main
David Degazio
Reported
2024-02-16 10:45:50 PST
rdar://123104165
Attachments
Add attachment
proposed patch, testcase, etc.
David Degazio
Comment 1
2024-02-16 10:52:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24634
EWS
Comment 2
2024-02-16 11:00:20 PST
Committed
274855@main
(c75cf46de8c4): <
https://commits.webkit.org/274855@main
> Reviewed commits have been landed. Closing PR #24634 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug