Unreviewed, fix WinCairo build after 274842@main https://bugs.webkit.org/show_bug.cgi?id=269595 rdar://123104165

Reviewed by Alex Christensen.

Removes extra GigacageConfig.h include in WTFConfig.cpp. This is
already included in WTFConfig.h behind the correct #ifdef, so we
just need to respect that when using it in WTFConfig.cpp.

* Source/WTF/wtf/WTFConfig.cpp:

Canonical link: https://commits.webkit.org/274855@main