Source/WTF/wtf/WTFConfig.cpp
@@ -25,7 +25,6 @@
 
 #include "config.h"
 #include <wtf/WTFConfig.h>
-#include <bmalloc/GigacageConfig.h>
 
 #include <wtf/Gigacage.h>
 #include <wtf/Lock.h>
@@ -57,7 +56,9 @@ alignas(WTF::ConfigAlignment) Slot g_config[WTF::ConfigSizeToProtect / sizeof(Sl
 
 } // namespace WebConfig
 
+#if !USE(SYSTEM_MALLOC)
 static_assert(Gigacage::startSlotOfGigacageConfig == WebConfig::reservedSlotsForExecutableAllocator + WebConfig::additionalReservedSlots);
+#endif
 
 #else // not ENABLE(UNIFIED_AND_FREEZABLE_CONFIG_RECORD)
 
